--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "rxjs": "^6.5.2",
+    "socketio": "^1.0.0",
+    "vue": "^2.6.10",
+    "vue-rx": "^6.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
