--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "rxjs": "^6.5.2",
-    "socketio": "^1.0.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-rx": "^6.2.0"
   },
