--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animejs": "^3.0.1",
+    "buefy": "^0.7.10",
     "core-js": "^2.6.5",
+    "moment": "^2.24.0",
     "rxjs": "^6.5.2",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
+    "vue-animejs": "^2.1.1",
+    "vue-router": "^3.0.7",
     "vue-rx": "^6.2.0"
   },
   "devDependencies": {
