--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon server.js 4002"
+    "serve": "nodemon --exec babel-node server.js 4002"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "nodemon": "^1.19.1",
     "socket.io": "^2.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-plugin-dynamic-import-node": "^2.3.0"
   }
 }
