--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "animejs": "^3.0.1",
     "buefy": "^0.7.10",
     "core-js": "^2.6.5",
