--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.6.10",
     "vue-animejs": "^2.1.1",
     "vue-router": "^3.0.7",
-    "vue-rx": "^6.2.0"
+    "vue-rx": "^6.2.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
