--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@vuex-orm/core": "^0.32.1",
     "animejs": "^3.0.1",
     "buefy": "^0.7.10",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "rxjs": "^6.5.2",
     "socket.io-client": "^2.2.0",
+    "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vue-animejs": "^2.1.1",
     "vue-router": "^3.0.7",
