--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "core-js": "^2.6.5",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "rxjs": "^6.5.2",
+    "sass-loader": "^7.1.0",
     "socket.io-client": "^2.2.0",
     "uuid": "^3.3.2",
     "vue": "^2.6.10",
