--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@vuex-orm/core": "^0.32.1",
     "animejs": "^3.0.1",
+    "axios": "^0.19.0",
     "buefy": "^0.7.10",
     "core-js": "^2.6.5",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "query-string": "^6.8.2",
     "rxjs": "^6.5.2",
     "sass-loader": "^7.1.0",
     "socket.io-client": "^2.2.0",
